--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     z-index: 1000;
     margin: 0px;
     padding: 0px;
-    /* border-bottom: 2px solid #fff; */
+    margin-top: 5px;
 
 
 }
@@ -116,6 +116,7 @@ ul li:last-child{
     padding: 2px 5px;
  
     border-bottom: 1px solid rgb(230, 224, 224);
+ 
 
   
 
